--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,10 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Use MySQL Connector-J -->
-
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-        <!--</dependency>-->
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
