--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
         <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mustache</artifactId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <!--<artifactId>spring-boot-starter-mustache</artifactId>-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
