--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,10 @@ mail.debug=true
 
 recaptcha.secret=6LcleXwUAAAAAFe1e1OCrlA-FvIO_K6sh_VGvDFX
 
-spring.session.jdbc.initialize-schema=always # Database schema initialization mode.
+spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
 
 hostname=localhost:8080
